# guid-rs

./: Cargo.toml  README.md  make.sh
app/: Cargo.toml  build.rs
app/src/: main.rs
guid/: Cargo.toml
guid/app/: Cargo.toml
guid/app/src/: builder.rs  main.rs
guid/app/src/def/: mod.rs  shape_type.rs  visual_type.rs
guid/app/src/shape/: elipse.rs  mod.rs  retangle.rs  shape.rs  triangle.rs  vertex.rs
guid/app/src/visual/: mod.rs  model.rs  vertex.rs  visual.rs
guid/drawing/: Cargo.toml
guid/drawing/src/: lib.rs
guid/drawing/src/color/: extension.rs  hsv.rs  hsva.rs  mod.rs  rgb.rs  rgba.rs
guid/drawing/src/context/: es_context.rs  mod.rs
guid/drawing/src/graphic/: frame_counter.rs  graphic.rs  mod.rs
guid/src/: main.rs
linux/drm/: Cargo.toml  build.rs
linux/drm/src/: drm.rs  ffi.rs  lib.rs  resources.rs
linux/drm/src/common/: define.rs  mod.rs  mode_info.rs
linux/drm/src/connector/: connector.rs  def.rs  define.rs  mod.rs  mode_info.rs
linux/drm/src/crtc/: crtc.rs  mod.rs
linux/drm/src/def/: connection_status.rs  event_context.rs  mod.rs  sub_pixel.rs
linux/egl/: Cargo.toml
linux/egl/src/: lib.rs
linux/gbm/: Cargo.toml
linux/gbm/src/: gbm.rs  lib.rs
linux/libc/: Cargo.toml  build.rs
linux/libc/src/: ffi.rs  file.rs  lib.rs
linux/openGL/gles/: Cargo.toml
linux/utils/: Cargo.toml
linux/utils/src/: lib.rs
nix/: Cargo.toml  build.rs
nix/src/: lib.rs
nix/src/ffi/: libc.rs
pixel/: Cargo.toml
pixel/src/: lib.rs
shaders/: simplefragshader_v3.glsl  simplevertshader_v2.glsl  simplevertshader_v3.glsl
(+64 files in other folders)
